-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8-shenandoah, 11-shenandoah, 13
-
Component/s: hotspot
-
b16
-
generic
-
generic
Missing case CompareAndSwapN/P in get_barrier_strength() trips as assert in shenadoahSupport.cpp. This is non-fatal for release builds.
Unknown node in get_barrier_strength:
23 ConP === 0 [[ 24 84 92 111 141 456 606 456 175 175 226 233 251 141 449 ]] #NULL
350 CheckCastPP === 801 762 [[ 626 606 456 631 ]] #java/util/concurrent/ConcurrentHashMap:NotNull:exact * Oop:java/util/concurrent/ConcurrentHashMap:NotNull:exact * !jvms: AttributesMap::ensureMap @ bci:11 AttributesMap::setAttribute @ bci:13
593 AddP === _ 461 461 73 [[ 606 ]] Oop:java/util/concurrent/atomic/AtomicReference:NotNull+16 * !jvms: VarHandleReferences$FieldInstanceReadWrite::compareAndSet @ bci:34 VarHandleGuards::guard_LLL_Z @ bci:37 AtomicReference::compareAndSet @ bci:6 AttributesMap::ensureMap @ bci:25 AttributesMap::setAttribute @ bci:13
600 Proj === 598 [[ 606 604 ]] #2 Memory: @BotPTR *+bot, idx=Bot; !jvms: VarHandleReferences$FieldInstanceReadWrite::compareAndSet @ bci:34 VarHandleGuards::guard_LLL_Z @ bci:37 AtomicReference::compareAndSet @ bci:6 AttributesMap::ensureMap @ bci:25 AttributesMap::setAttribute @ bci:13
599 Proj === 598 [[ 608 606 ]] #0 !jvms: VarHandleReferences$FieldInstanceReadWrite::compareAndSet @ bci:34 VarHandleGuards::guard_LLL_Z @ bci:37 AtomicReference::compareAndSet @ bci:6 AttributesMap::ensureMap @ bci:25 AttributesMap::setAttribute @ bci:13
606 CompareAndSwapP === 599 600 593 350 23 [[ 607 612 619 626 ]] !jvms: VarHandleReferences$FieldInstanceReadWrite::compareAndSet @ bci:34 VarHandleGuards::guard_LLL_Z @ bci:37 AtomicReference::compareAndSet @ bci:6 AttributesMap::ensureMap @ bci:25 AttributesMap::setAttribute @ bci:13
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/shenandoahSupport.cpp:3246
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/buildbot/worker/jdkX-linux/build/src/hotspot/share/gc/shenandoah/c2/shenandoahSupport.cpp:3246), pid=25995, tid=26130
# Error: ShouldNotReachHere()
Unknown node in get_barrier_strength:
23 ConP === 0 [[ 24 84 92 111 141 456 606 456 175 175 226 233 251 141 449 ]] #NULL
350 CheckCastPP === 801 762 [[ 626 606 456 631 ]] #java/util/concurrent/ConcurrentHashMap:NotNull:exact * Oop:java/util/concurrent/ConcurrentHashMap:NotNull:exact * !jvms: AttributesMap::ensureMap @ bci:11 AttributesMap::setAttribute @ bci:13
593 AddP === _ 461 461 73 [[ 606 ]] Oop:java/util/concurrent/atomic/AtomicReference:NotNull+16 * !jvms: VarHandleReferences$FieldInstanceReadWrite::compareAndSet @ bci:34 VarHandleGuards::guard_LLL_Z @ bci:37 AtomicReference::compareAndSet @ bci:6 AttributesMap::ensureMap @ bci:25 AttributesMap::setAttribute @ bci:13
600 Proj === 598 [[ 606 604 ]] #2 Memory: @BotPTR *+bot, idx=Bot; !jvms: VarHandleReferences$FieldInstanceReadWrite::compareAndSet @ bci:34 VarHandleGuards::guard_LLL_Z @ bci:37 AtomicReference::compareAndSet @ bci:6 AttributesMap::ensureMap @ bci:25 AttributesMap::setAttribute @ bci:13
599 Proj === 598 [[ 608 606 ]] #0 !jvms: VarHandleReferences$FieldInstanceReadWrite::compareAndSet @ bci:34 VarHandleGuards::guard_LLL_Z @ bci:37 AtomicReference::compareAndSet @ bci:6 AttributesMap::ensureMap @ bci:25 AttributesMap::setAttribute @ bci:13
606 CompareAndSwapP === 599 600 593 350 23 [[ 607 612 619 626 ]] !jvms: VarHandleReferences$FieldInstanceReadWrite::compareAndSet @ bci:34 VarHandleGuards::guard_LLL_Z @ bci:37 AtomicReference::compareAndSet @ bci:6 AttributesMap::ensureMap @ bci:25 AttributesMap::setAttribute @ bci:13
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/shenandoahSupport.cpp:3246
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/buildbot/worker/jdkX-linux/build/src/hotspot/share/gc/shenandoah/c2/shenandoahSupport.cpp:3246), pid=25995, tid=26130
# Error: ShouldNotReachHere()
- is blocked by
-
JDK-8221766 Load-reference barriers for Shenandoah
-
- Resolved
-