8222129: Shenandoah: Missing CompareAndSwapP/N case in get_barrier_strength()

Reviewed-by: shade